# opl

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: README.md  app.js  bytecode-vm.md  collections.md  debugger.md  examples.md  functions.md  index.html  index.md  installation.md  language-basics.md  models.md  modules-imports.md  playground.md  quickstart.md  standard-library.md  styles.css  syntax.md  vscode-extension.md
opl/: __init__.py  __main__.py  __version__.py  ast.py  cli.py  errors.py  formatter.py  interpreter.py  lexer.py  main.py  module_loader.py  parser.py  repl.py  source.py  stdlib_bindings.py
opl/diagnostics/: __init__.py  core.py  runner.py
opl/examples/: arithmetic.opl  bfs.opl  collections.opl  countdown.opl  data.opl  functions.opl  hello.opl  import_collections.opl  import_model.opl  main_import.opl  map.opl  model.opl  models.opl  pirates.opl  test.opl
opl/frontend/: __init__.py  pirate_parser.py
opl/vm/: __init__.py  chunk.py  compiler.py  debugger.py  deserializer.py  gc.py  instructions.py  serializer.py  virtual_machine.py
opl_dap/: __init__.py  adapter.py  server.py
opl_lsp/: __init__.py  server.py  symbols.py
vscode-opl/: .vscodeignore  README.md  extension.js  language-configuration.json  package-lock.json  package.json
vscode-opl/icons/: opl-icon-theme.json
vscode-opl/snippets/: snippets.json
vscode-opl/symbols/: extractor.js
vscode-opl/syntaxes/: opl.tmLanguage.json
website/: README.md  app.js  index.html  playground_server.py  styles.css
