[project]
name = "oplang"
version = "1.0.1"
description = "One Piece Language: a lightweight scripting language with pirate syntax, a VM, debugger, and editor tooling."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "OPL Contributors" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "opl",
    "one-piece-language",
    "programming-language",
    "bytecode-vm",
    "language-server"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters"
]

[project.urls]
Homepage = "https://github.com/opl-lang/opl"
Documentation = "https://github.com/opl-lang/opl/tree/main/docs"
Repository = "https://github.com/opl-lang/opl"
Issues = "https://github.com/opl-lang/opl/issues"

[project.scripts]
opl = "opl.cli:main"
opl-lsp = "opl_lsp.server:main"
opl-dap = "opl_dap.server:main"

[tool.setuptools.packages.find]
include = ["opl", "opl.*", "opl_dap", "opl_lsp"]
exclude = ["docs*", "website*", "vscode-opl*"]

[tool.setuptools.package-data]
opl = ["stdlib/*.opl"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"
